@@ -33,16 +33,16 @@ class Person(db.Model):
     id = db.Column(db.Integer, primary_key=True)
     name = db.Column(db.Unicode, unique=True)
     birth_date = db.Column(db.Date)
-    computers = db.relationship('Computer', backref=db.backref('owner',
-                                                               lazy='dynamic'))
 
 
 class Computer(db.Model):
     id = db.Column(db.Integer, primary_key=True)
     name = db.Column(db.Unicode, unique=True)
     vendor = db.Column(db.Unicode)
-    owner_id = db.Column(db.Integer, db.ForeignKey('person.id'))
     purchase_time = db.Column(db.DateTime)
+    owner_id = db.Column(db.Integer, db.ForeignKey('person.id'))
+    owner = db.relationship('Person', backref=db.backref('computers',
+                                                         lazy='dynamic'))
 
 
 # Create the database tables.
